# FinOps-assessment

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pr-body.md  pyproject.toml  stage-1-research.md  stage-2-rubberduck.md  stage-3-plan.md  stage-4-self-review.md  stage-5-implementation.md  testResults.xml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: milestone.yml  squad-task.yml
.github/agents/: squad.agent.md
.github/workflows/: ci.yml  demo-report.yml  docs.yml  ps-release.yml  squad-approve.yml  squad-heartbeat.yml  squad-issue-assign.yml  squad-pr-route.yml  squad-triage.yml  sync-squad-labels.yml
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-12-followup-batch.md  2026-05-13T065800Z-focus58-stage3.md  2026-05-13T082500Z-61-stage3-batch.md  2026-05-13T085500Z-61-stage4-reject-revise-cycle.md  2026-05-13T185200Z-diego-58-stage5-shipped.md  session-2026-05-12-followup.md  session-2026-05-12-rubric-pivot.md  session-2026-05-12.md
.squad/orchestration-log/: 2026-05-12-bootstrap.md  2026-05-12T08-18Z-sam-squad-cli-audit.md  2026-05-12T08-18Z-yuki-skill-rewrite.md  2026-05-12T08-42Z-rubric-pivot.md  2026-05-12T18-52Z-followup-batch.md  2026-05-13T065800Z-maya-stage3-58.md  2026-05-13T082500Z-maya-stage3-61.md  2026-05-13T082530Z-coordinator-issue-73-stable-salt.md  2026-05-13T082545Z-coordinator-issue-74-template-overlay.md  2026-05-13T082600Z-coordinator-resolve-placeholders-pr72.md  2026-05-13T085500Z-noor-stage4-61.md  2026-05-13T085530Z-yuki-stage3-revise-61.md  2026-05-13T185200Z-diego-58-impl.md
.squad/templates/: charter.md  copilot-instructions.md  mcp-config.md  multi-agent-format.md  plugin-marketplace.md  raw-agent-output.md  roster.md  routing.md  run-output.md  scribe-charter.md  skill.md  squad.agent.md
data/: personas.yaml
data/rules/: azure.yaml  m365.yaml
docs/: agentic-finops.md  contributing.md  focus-export.md  plan.md  powershell.md  rules.md  schema.md  security.md  user-guide.md
docs/cmdlets/: Assert-FinOpsReadOnlyScope.md  Export-FinOpsFocusAligned.md  Export-FinOpsPlaybook.md  FinOpsAssess.md  Get-FinOpsInfo.md  Invoke-FinOpsAssessment.md  Invoke-FinOpsLiveCollection.md  Invoke-FinOpsTriage.md  README.md  Test-FinOpsCatalogCoverage.md  Test-FinOpsConfiguration.md  Test-FinOpsReadOnlyScope.md
docs/decisions/: 0001-powershell-side-by-side.md
docs/images/: README.md
docs/plans/: 059-az-ahb-eligible.md  059-az-commitment-renewal-review.md  059-az-commitment-under-covered.md  059-az-reservation-scope-mismatch.md  059-az-savings-plan-eligible-spend.md  071-focus-exporter-multi-surface.md  073-engine-tenant-stable-pii-salt.md  074-reporter-template-overlay.md  075-serialize-scribe-behind-stage4.md
docs/roadmap/: README.md  focus-mapping.md
docs/skills/: README.md  run-assessment.md
examples/: demo-report.csv  demo-report.html  demo-report.json  demo-triage.csv  demo-triage.json  focus-aligned.csv  focus-aligned.csv.manifest.json  playbook.jsonl  playbook.jsonl.manifest.json
final-test/: demo-report.csv  demo-report.html  demo-report.json
powershell/: PSScriptAnalyzerSettings.psd1  README.md
powershell/FinOpsAssess/: FinOpsAssess.psd1  FinOpsAssess.psm1
powershell/tests/: FinOpsAssess.PSGalleryReadiness.Tests.ps1  FinOpsAssess.Tests.ps1  Generate-PSCmdletDocs.Tests.ps1  Get-FinOpsAccessToken.Tests.ps1  Get-FinOpsAdoCollector.Tests.ps1  Get-FinOpsArmCollector.Tests.ps1  Get-FinOpsDataProjection.Tests.ps1  Get-FinOpsGitHubCollector.Tests.ps1  Get-FinOpsGraphCollector.Tests.ps1  Get-FinOpsNormalizedDataset.Tests.ps1  Get-FinOpsNow.Tests.ps1  Invoke-FinOpsAssessment.Tests.ps1  Invoke-FinOpsGitHubAdoRules.Tests.ps1  Invoke-FinOpsLiveCollection.Tests.ps1  Invoke-FinOpsRestRequest.Tests.ps1  Test-FinOpsCatalogCoverage.Tests.ps1  Test-ReleaseReadiness.Tests.ps1  Write-FinOpsCollectorCsv.Tests.ps1
samples/: README.md  ado_orgs.csv  azure_benefit_recommendations.csv  azure_log_workspaces.csv  azure_reservations.csv  azure_resources.csv  github_orgs.csv  usage.csv  users.csv
scripts/: FinOpsCmdletHelp.psm1  Invoke-FinOpsAssess.ps1  Test-ReleaseReadiness.ps1  canonicalize_report.py  generate_docs.py  generate_ps_azure_fixtures.py  generate_ps_cmdlet_docs.ps1  generate_ps_conformance_fixtures.py  generate_ps_data_projection.py  generate_ps_focus_fixtures.py  generate_ps_ghado_fixtures.py  generate_ps_html_fixtures.py  generate_ps_live_collector_fixtures.py  generate_ps_m365_fixtures.py  generate_ps_playbook_fixtures.py  generate_ps_practice_review_fixtures.py  generate_ps_report_fixtures.py  generate_ps_triage_fixtures.py
src/finops_assess/: __init__.py  catalog.py  catalog_refresh.py  cli.py  data_paths.py  engine.py  models.py  persona.py  pricing.py  rules.py  triage.py
test-demo/: demo-report.csv  demo-report.html  demo-report.json
test-pdf/: demo-report.csv  demo-report.html  demo-report.json
tests/: test_az_commitment_renewal_review.py  test_az_commitment_under_covered.py  test_az_reservation_scope_mismatch.py  test_az_savings_plan_eligible.py  test_catalog_refresh.py  test_cli.py  test_cli_demo.py  test_cli_pdf.py  test_cli_run.py  test_cli_triage.py  test_csv_collector.py  test_csv_reporter.py  test_demo_bundle.py  test_engine.py  test_focus_aligned_reporter.py  test_generate_docs.py  test_html_reporter.py  test_live_collectors.py  test_loaders.py  test_m365_models.py  test_packaged_data.py  test_pdf_reporter.py  test_persona_engine.py  test_pii_salt_resolution.py  test_playbook_atomic.py  test_playbook_byte_contract.py  test_playbook_cleanup_orphans.py  test_playbook_cli_cleanup_orphans.py  test_playbook_cross_run_stability.py  test_playbook_golden.py  test_playbook_manifest_schema.py  test_playbook_overlay.py  test_playbook_pii_warning.py  test_playbook_render_context_boundary.py  test_playbook_reporter.py  test_playbook_strict_undefined.py  test_playbook_template_lf.py  test_playbook_template_vars_memo.py  test_practice_review.py  test_pricing.py  (+14 more)
(+221 files in other folders)
