[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finops-assess"
version = "0.0.1"
description = "Read-only FinOps assessment for the Microsoft ecosystem (M365, Azure, GitHub, Azure DevOps)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "martinopedal" }]
keywords = ["finops", "microsoft365", "azure", "github", "azure-devops", "licensing", "cost-optimization"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0.12",
]
pdf = [
    # WeasyPrint renders the print-tuned HTML to a deterministic PDF.
    # It pulls heavy native deps (Pango, cairo, GDK-pixbuf) so it is
    # **not** in the default install — see README "PDF reports" for the
    # platform-specific install hints.
    "weasyprint>=68",
]

[project.scripts]
finops-assess = "finops_assess.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
finops_assess = [
    "demo/*.csv",
    "demo/*.yaml",
    "reporters/templates/*.html.j2",
    "reporters/templates/*.pdf.html.j2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# WeasyPrint is an optional runtime dep behind the [pdf] extra; it has no
# inline type stubs and isn't installed in CI by default. Tell mypy to
# ignore it whether or not it happens to be importable in a given env, so
# the same source compiles cleanly with or without the extra installed.
[[tool.mypy.overrides]]
module = ["weasyprint"]
ignore_missing_imports = true
